--- a/정유진깃털/5주차 스터디.md
+++ b/정유진깃털/5주차 스터디.md
@@ -51,5 +51,39 @@
 
 
 
+# HTML태그의 제왕
+
+##### 링크 태그
+<link rel="rel 속성 값" href="외부 리소스 위치">
+
+예시
+```
+<link rel="stylesheet" href="styles.css">
+<link rel="icon" href="favicon.ico">
+```
+
+```
+<!doctype html>
+<html>
+<head>
+  <title>WEB1 - html</title>
+  <meta charset="utf-8">
+</head>
+<body>
+  <ol>
+    <li>HTML</li>
+    <li>CSS</li>
+    <li>JavaScript</li>
+  </ol>
+  <h1>HTML</h1>
+  <p><a href="https://www.w3.org/TR/html5/" target="_blank" title="html5 specification">Hypertext Markup Language (HTML)</a> is the standard markup language for <strong>creating <u>web</u> pages</strong> and web applications.Web browsers receive HTML documents from a web server or from local storage and render them into multimedia web pages. HTML describes the structure of a web page semantically and originally included cues for the appearance of the document.
+  <img src="coding.jpg" width="100%">
+  </p><p style="margin-top:45px;">HTML elements are the building blocks of HTML pages. With HTML constructs, images and other objects, such as interactive forms, may be embedded into the rendered page. It provides a means to create structured documents by denoting structural semantics for text such as headings, paragraphs, lists, links, quotes and other items. HTML elements are delineated by tags, written using angle brackets.
+  </p>
+</body>
+</html>
+```
+
+
 
 
