--- a/중간보고서.md
+++ b/중간보고서.md
@@ -23,7 +23,7 @@
 
 #### 1.4. 학습 방법 및 계획
 
-스터디 운영규칙
+**스터디 운영규칙**
 주 1회 이상 대면활동(부득이한 경우에만 비대면 활동)
 시험기간(1-2주)에는 시험 공부에 집중.
 함께 성장하는 것을 중요시 할 것.
@@ -31,7 +31,7 @@
 각자 역량이 다르니 대략적인 진도는 정하되, 각자 소화시킬 수 있는만큼 진도를 가져가기.
 
 
-[프론트엔드 개발팀]
+**[프론트엔드 개발팀]**
 - html+css+JavaScript(약 6주) 생활코딩 강의와 책을 이용해 공부
 일주일 10강 목표, 시험기간에는 유동적으로 조정
 서적: (생활코딩!) HTML+CSS+자바스크립트 : 처음 프로그래밍을 시작하는 입문자의 눈높이에 맞춘
@@ -45,7 +45,7 @@
 학습 이후, 데이터 분석팀에서의 output을 ux/ui를 고려해 시각화해 볼 예정.
 
 
-[데이터분석팀] - 교재 지정, 강의 지정, 학습 트리 지정
+**[데이터분석팀]** - 교재 지정, 강의 지정, 학습 트리 지정
 IDLE - PyCharm
 교재 - 혼자 공부하는 데이터 분석 with 파이썬
 강의 - 혼자 공부하는 데이터 분석 with 파이썬 동봉 강의
@@ -55,55 +55,55 @@ IDLE - PyCharm
 
 
 #### 1.5. 주차별 학습계획
-1주차
+**1주차**
 동아리 오리엔테이션
 데이터분석 팀, 프론트엔드 팀 학습목표 상기
 필요한 학습 환경 마련(프로그램 설치, 강의 사이트 회원가입 등)
 강의 수강 시작
 
-2주차
+**2주차**
 [데이터 분석팀]
 혼자 공부하는 데이터 분석 with 파이썬 chapter1,2 학습(데이터 분석)
 [프론트엔드팀]
 생활코딩 1-10강 수강
 깃허브 업로드
 
-3주차
+**3주차**
 [데이터 분석팀]
 혼자 공부하는 데이터 분석 with 파이썬 chapter3,4 학습(데이터 분석)
 [프론트엔드팀]
 생활코딩 11-15강 수강 및 실습
 깃허브 업로드
 
-4주차
+**4주차**
 [데이터 분석팀]
 혼자 공부하는 데이터 분석 with 파이썬 chapter3 내용 노인 데이터 적용(데이터 분석)
 [프론트엔드팀]
 생활코딩 16-20강 수강 및 실습
 깃허브 업로드
 
-5주차
+**5주차**
 [데이터 분석팀]
 혼자 공부하는 데이터 분석 with 파이썬 chapter3 내용 노인 데이터 적용(데이터 분석)
 [프론트엔드팀]
 생활코딩 21강-25강 수강 및 실습
 깃허브 업로드
 
-6주차
+**6주차**
 [데이터 분석팀]
 혼자 공부하는 데이터 분석 with 파이썬 chapter4 내용 노인 데이터 적용(데이터 분석)
 [프론트엔드팀]
 생활코딩 26-30강 수강 및 실습
 깃허브 업로드
 
-7주차
+**7주차**
 [데이터 분석팀]
 혼자 공부하는 데이터 분석 with 파이썬 chapter4 내용 노인 데이터 적용(데이터 분석)
 [프론트엔드팀]
 생활코딩 react강의 1-3강 수강 및 실습
 깃허브 업로드
 
-8주차
+**8주차**
 [데이터 분석팀]
 노인 데이터 output으로 데이터 시각화(chapter5 내용)
 [프론트엔드팀]
@@ -111,7 +111,7 @@ IDLE - PyCharm
 데이터 분석팀과 함께 데이터 시각화하기
 깃허브 업로드
 
-9주차
+**9주차**
 [데이터 분석팀]
 노인 데이터 output으로 데이터 시각화(chapter6 내용)
 [프론트엔드팀]
@@ -119,10 +119,10 @@ IDLE - PyCharm
 데이터분석팀과 함께 데이터 시각화하기
 깃허브 업로드
 
-10주차
+**10주차**
 데이터 분석 시각화 완료
 
-11주차
+**11주차**
 활동 성찰 및 마무리
 최종 보고서 작성
 
@@ -130,7 +130,7 @@ IDLE - PyCharm
 
 ### 2. 학습 진행 상황 및 성찰
 #### 2.1. 학습 진행 상황
-[프론트엔드 팀]
+**[프론트엔드 팀]**
 현재까지 강의를 통해 HTML에 대한 학습을 진행중에 있다.
 책을 구매하여 함께 공부를 진행하고 있다.
 
@@ -140,15 +140,29 @@ IDLE - PyCharm
 학습내용 상기.
 스터디 규칙 정하기.
 책 구매.
-2주차: 프로젝트, 기획, 코딩과 html에 대해 알아보았다.
-3주차: 태그 등과 같은 html 기본문법에 대해 각자 학습을 진행하였다.
-4주차: html 기본문법에 대한 학습을 각자 진행하였다.
-5주차: 오늘할 내용 적기
 
-강의와 책을 통해 html에 대한 학습을 진행하였다.
-html에 대한 기본 문법에 대해 배웠으며, 실습을 통해 이를 적용해보았다.
-평소에는 주에 10강 정도 강의를 수강하고 실습을 병행하며 학습 내용에 대한 이해도를 높였다.
-시험기간일때에는 학습량을 낮추어 학습을 진행하였다.
+2주차: 
+강의수강을 시작하였다.
+프로젝트, 기획, 코딩과 html에 대해 알아보았다.
+
+3주차: 
+태그 등과 같은 html 기본문법에 대해 각자 학습을 진행하였다.
+가장 많이 사용되는 태그에 대해 알아보고 실습을 진행하였다.
+
+4주차: 
+html 기본문법에 대한 학습을 각자 진행하였다. 
+배운내용을 바탕으로 '흑백요리사' 사이트를 만들어보며 실습을 진행하였다.
+       
+5주차:
+HTML의 기초적인 문법에 대한 학습을 완료하였다.
+코드를 작성하며 실습을 진행하였다.
+
+
+- 강의와 책을 통해 html에 대한 학습을 진행하였다.
+- html에 대한 기본 문법에 대해 배웠으며, 실습을 통해 이를 적용해보았다.
+- 평소에는 주에 10강 정도 강의를 수강하고 실습을 병행하며 학습 내용에 대한 이해도를 높였다.
+- 시험기간일때에는 학습량을 낮추어 학습에 대한 부담감을 줄여주었다.
+- 최근 유행하는 프로그램인 '흑백요리사'와 관련된 웹사이트를 만들며 학습에 대한 흥미와 이해도를 높였다.
 
 
 
