--- a/중간보고서.md
+++ b/중간보고서.md
@@ -1,173 +1,181 @@
 ### 1. 학습 프로젝트 소개
 #### 1.1. 학습배경 및 필요성
-> 학습 프로젝트를 수행하게 된 배경 및 필요성을 작성하세요.
-'식혜'는 사회문제를 해결하는 것에 대해 공통된 관심사를 가져 모이게 되었습니다. 해결해야 할 문제를 발굴하는데, 데이터 분석이 필요함을 느꼈습니다. 
-또, 문제를 해결하는데 있어, 데이터에 기반해 창의적인 시각으로 문제를 바라보고 싶었습니다. 이후, 문제를 해결하고 영향력을 발휘하기 위한 수단으로 플랫폼을 만들어보고 싶었습니다. 
-이와 관련된 역량이 부족했기에 함께 공부하며 생각한 것들을 구체화 나가자는 취지로 동아리를 결성하게 되었습니다.
+<p>'식혜'는 사회문제를 해결하는 것에 대해 공통된 관심사를 가져 모이게 되었습니다. 해결해야 할 문제를 발굴하는데, 데이터 분석이 필요함을 느꼈습니다.
+<br> 또, 문제를 해결하는데 있어, 데이터에 기반해 창의적인 시각으로 문제를 바라보고 싶었습니다. 이후, 문제를 해결하고 영향력을 발휘하기 위한 수단으로 플랫폼을 만들어보기로 하였습니다.
+<br> 이와 관련된 역량이 부족했기에 함께 공부하며 생각한 것들을 구체화 나가자는 취지로 동아리를 결성하게 되었습니다.<br></p>
+<br>
 
 
 #### 1.2. 학습 목표
-데이터를 통해 사회문제를 해결하고, 프론트엔드 개발 학습을 통해 플랫폼을 만들어본다.
+<p>데이터를 통해 사회문제를 해결하고, 프론트엔드 개발 학습을 통해 플랫폼을 만들어본다.
 - 노인 돌봄과 일자리 문제와 관련된 데이터를 다루며 학습을 진행.
-  분석한 데이터로 앱, 웹 형태의 플랫폼을 만드는데 이용할 예정. 
+- 분석한 데이터로 앱, 웹 형태의 플랫폼을 만드는데 이용할 예정. 
 - 최종적으로 플랫폼을 통해 노인 소외와 같은 사회적 죽음을 늦추고, 노인의 사회적 안전망을 구축하는 것이 목표.
-- 스터디를 통해 충분한 학습시간을 확보하고 역량을 강화할 예정.
+- 스터디를 통해 충분한 학습시간을 확보하고 역량을 강화할 예정.<br></p>
+<br>
 
 
 
 #### 1.3. 학습내용
-데이터 분석을 통해 문제에 대해 다양한 시각으로 접근하는 방법을 배우고, 프론트엔드 개발을 통해 우리의 데이터를 시각화하거나 해결하는 플랫폼을 만드는 쪽으로 학습 방향성을 설정했습니다.
-데이터 분석에 대한 역량강화와 프론트 엔드 학습을 개인이 동시에 진행하기에는 학습에 대한 부담감이 많이 커질 것 같아 데이터 분석팀과 프론트엔드 팀을 나누어 학습을 진행할 예정입니다.
-'식혜'팀은 사회문제를 해결하는데 공통된 관심사를 가지기에, 특히 고령사회로 인한 문제에 주목하였기에, 노인 돌봄과 일자리 문제와 관련시켜 학습을 진행할 예정입니다.
+<p>데이터 분석을 통해 문제에 대해 다양한 시각으로 접근하는 방법을 배우고, 프론트엔드 개발을 통해 우리의 데이터를 시각화하거나 해결하는 플랫폼을 만드는 쪽으로 학습 방향성을 설정했습니다.<br>
+데이터 분석에 대한 역량강화와 프론트 엔드 학습을 개인이 동시에 진행하기에는 학습에 대한 부담감이 많이 커질 것 같아 데이터 분석팀과 프론트엔드 팀을 나누어 학습을 진행할 예정입니다.<br>
+'식혜'팀은 사회문제를 해결하는데 공통된 관심사를 가지기에, 특히 고령사회로 인한 문제에 주목하였기에, 노인 돌봄과 일자리 문제와 관련시켜 학습을 진행할 예정입니다.<br></p>
+<br>
 
 
 #### 1.4. 학습 방법 및 계획
 
 **스터디 운영규칙**
-주 1회 이상 대면활동(부득이한 경우에만 비대면 활동)
-시험기간(1-2주)에는 시험 공부에 집중.
-함께 성장하는 것을 중요시 할 것.
-활동을 하며 긍정적인 언어를 많이 사용할 것.
-각자 역량이 다르니 대략적인 진도는 정하되, 각자 소화시킬 수 있는만큼 진도를 가져가기.
-
+<p>- 주 1회 이상 대면활동(부득이한 경우에만 비대면 활동)
+- 시험기간(1-2주)에는 시험 공부에 집중.
+- 함께 성장하는 것을 중요시 할 것.
+- 활동을 하며 긍정적인 언어를 많이 사용할 것.
+- 각자 역량이 다르니 대략적인 진도는 정하되, 각자 소화시킬 수 있는만큼 진도를 가져가기.
+<br></p>
+<br>
 
 **[프론트엔드 개발팀]**
-- html+css+JavaScript(약 6주) 생활코딩 강의와 책을 이용해 공부
-일주일 10강 목표, 시험기간에는 유동적으로 조정
-서적: (생활코딩!) HTML+CSS+자바스크립트 : 처음 프로그래밍을 시작하는 입문자의 눈높이에 맞춘
-강의: https://opentutorials.org/course/3084 (약 30강)
+<p>- html+css+JavaScript(약 6주) 생활코딩 강의와 책을 이용해 공부.<br>
+일주일 10강 목표, 시험기간에는 유동적으로 조정<br>
+서적: (생활코딩!) HTML+CSS+자바스크립트 : 처음 프로그래밍을 시작하는 입문자의 눈높이에 맞춘<br>
+강의: https://opentutorials.org/course/3084 (약 30강)<br>
 
-- react(약 3주) 생활코딩 강의와 책을 이용해 공부
-강의: https://opentutorials.org/course/4900 주에 3-4강 목표
-서적: 생활코딩! React 리액트 프로그래밍 (개정판) 처음 프로그래밍을 시작하는 입문자의 눈높이에 맞춘.
+- react(약 3주) 생활코딩 강의와 책을 이용해 공부<br>
+강의: https://opentutorials.org/course/4900 주에 3-4강 목표<br>
+서적: 생활코딩! React 리액트 프로그래밍 (개정판) 처음 프로그래밍을 시작하는 입문자의 눈높이에 맞춘.<br>
 
-**각자 강의를 듣고, 실습이 필요한 부분은 실습을 진행하며 학습을 진행할 것.
-학습 이후, 데이터 분석팀에서의 output을 ux/ui를 고려해 시각화해 볼 예정.
+**각자 강의를 듣고, 실습이 필요한 부분은 실습을 진행하며 학습을 진행할 것.<br>
+학습 이후, 데이터 분석팀에서의 output을 ux/ui를 고려해 시각화해 볼 예정.<br></p>
+<br>
 
 
-**[데이터분석팀]** - 교재 지정, 강의 지정, 학습 트리 지정
-IDLE - PyCharm
-교재 - 혼자 공부하는 데이터 분석 with 파이썬
-강의 - 혼자 공부하는 데이터 분석 with 파이썬 동봉 강의
-학습 트리 - 4~6주간 책의 4챕터(데이터 분석 과정) 학습 -> 이후 4주간 노인데이터를 가져와 책의 2챕터부터 4챕터까지 재실습
--> 이후 2주간 노인데이터 output으로 데이터 시각화 과정 (챕터5~6) 시행.
-**각자 역량대로 진도는 조절할 것.
+**[데이터분석팀]** - 교재 지정, 강의 지정, 학습 트리 지정<br>
+<p>IDLE - PyCharm<br>
+교재: 혼자 공부하는 데이터 분석 with 파이썬<br>
+강의: 혼자 공부하는 데이터 분석 with 파이썬 동봉 강의<br>
+학습 트리: 4-6주간 책의 4챕터(데이터 분석 과정) 학습 -> 이후 4주간 노인데이터를 가져와 책의 2챕터부터 4챕터까지 재실습<br>
+-> 이후 2주간 노인데이터 output으로 데이터 시각화 과정 (챕터5~6) 시행.<br>
+**각자 역량대로 진도는 조절할 것.<br></p>
+<br>
 
 
 #### 1.5. 주차별 학습계획
 **1주차**
-동아리 오리엔테이션
-데이터분석 팀, 프론트엔드 팀 학습목표 상기
-필요한 학습 환경 마련(프로그램 설치, 강의 사이트 회원가입 등)
+>동아리 오리엔테이션<br>
+데이터분석 팀, 프론트엔드 팀 학습목표 상기<br>
+필요한 학습 환경 마련(프로그램 설치, 강의 사이트 회원가입 등)<br>
 강의 수강 시작
 
 **2주차**
-[데이터 분석팀]
-혼자 공부하는 데이터 분석 with 파이썬 chapter1,2 학습(데이터 분석)
-[프론트엔드팀]
-생활코딩 1-10강 수강
+>[데이터 분석팀]<br>
+혼자 공부하는 데이터 분석 with 파이썬 chapter1,2 학습(데이터 분석)<br><br>
+[프론트엔드팀]<br>
+생활코딩 1-10강 수강<br>
 깃허브 업로드
 
 **3주차**
-[데이터 분석팀]
-혼자 공부하는 데이터 분석 with 파이썬 chapter3,4 학습(데이터 분석)
-[프론트엔드팀]
-생활코딩 11-15강 수강 및 실습
-깃허브 업로드
+>[데이터 분석팀]<br>
+혼자 공부하는 데이터 분석 with 파이썬 chapter3,4 학습(데이터 분석)<br><br>
+[프론트엔드팀]<br>
+생활코딩 11-15강 수강 및 실습<br>
+깃허브 업로드<br>
 
 **4주차**
-[데이터 분석팀]
-혼자 공부하는 데이터 분석 with 파이썬 chapter3 내용 노인 데이터 적용(데이터 분석)
-[프론트엔드팀]
-생활코딩 16-20강 수강 및 실습
-깃허브 업로드
+>[데이터 분석팀]<br>
+혼자 공부하는 데이터 분석 with 파이썬 chapter3 내용 노인 데이터 적용(데이터 분석)<br><br>
+[프론트엔드팀]<br>
+생활코딩 16-20강 수강 및 실습<br>
+깃허브 업로드<br>
 
 **5주차**
-[데이터 분석팀]
-혼자 공부하는 데이터 분석 with 파이썬 chapter3 내용 노인 데이터 적용(데이터 분석)
-[프론트엔드팀]
-생활코딩 21강-25강 수강 및 실습
-깃허브 업로드
+>[데이터 분석팀]<br>
+혼자 공부하는 데이터 분석 with 파이썬 chapter3 내용 노인 데이터 적용(데이터 분석)<br><br>
+[프론트엔드팀]<br>
+생활코딩 21강-25강 수강 및 실습<br>
+깃허브 업로드<br>
 
 **6주차**
-[데이터 분석팀]
-혼자 공부하는 데이터 분석 with 파이썬 chapter4 내용 노인 데이터 적용(데이터 분석)
-[프론트엔드팀]
-생활코딩 26-30강 수강 및 실습
-깃허브 업로드
+>[데이터 분석팀]<br>
+혼자 공부하는 데이터 분석 with 파이썬 chapter4 내용 노인 데이터 적용(데이터 분석)<br><br>
+[프론트엔드팀]<br>
+생활코딩 26-30강 수강 및 실습<br>
+깃허브 업로드<br>
 
 **7주차**
-[데이터 분석팀]
-혼자 공부하는 데이터 분석 with 파이썬 chapter4 내용 노인 데이터 적용(데이터 분석)
-[프론트엔드팀]
-생활코딩 react강의 1-3강 수강 및 실습
-깃허브 업로드
+>[데이터 분석팀]<br>
+혼자 공부하는 데이터 분석 with 파이썬 chapter4 내용 노인 데이터 적용(데이터 분석)<br><br>
+[프론트엔드팀]<br>
+생활코딩 react강의 1-3강 수강 및 실습<br>
+깃허브 업로드<br>
 
 **8주차**
-[데이터 분석팀]
-노인 데이터 output으로 데이터 시각화(chapter5 내용)
-[프론트엔드팀]
-생활코딩 react강의 4-7강 수강 및 실습
-데이터 분석팀과 함께 데이터 시각화하기
-깃허브 업로드
+>[데이터 분석팀]<br>
+노인 데이터 output으로 데이터 시각화(chapter5 내용)<br><br>
+[프론트엔드팀]<br>
+생활코딩 react강의 4-7강 수강 및 실습<br>
+데이터 분석팀과 함께 데이터 시각화하기<br>
+깃허브 업로드<br>
 
 **9주차**
-[데이터 분석팀]
-노인 데이터 output으로 데이터 시각화(chapter6 내용)
-[프론트엔드팀]
-생활코딩 react강의 8-10강 수강 및 실습
-데이터분석팀과 함께 데이터 시각화하기
-깃허브 업로드
+>[데이터 분석팀]<br>
+노인 데이터 output으로 데이터 시각화(chapter6 내용)<br><br>
+[프론트엔드팀]<br>
+생활코딩 react강의 8-10강 수강 및 실습<br>
+데이터분석팀과 함께 데이터 시각화하기<br>
+깃허브 업로드<br>
 
 **10주차**
-데이터 분석 시각화 완료
+>데이터 분석 시각화 완료<br>
 
 **11주차**
-활동 성찰 및 마무리
-최종 보고서 작성
+>활동 성찰 및 마무리<br>
+최종 보고서 작성<br>
+<br>
 
 
 
 ### 2. 학습 진행 상황 및 성찰
 #### 2.1. 학습 진행 상황
-**[프론트엔드 팀]**
-현재까지 강의를 통해 HTML에 대한 학습을 진행중에 있다.
-책을 구매하여 함께 공부를 진행하고 있다.
+##### [프론트엔드 팀]
+>현재까지 강의를 통해 HTML에 대한 학습을 진행중에 있다.<br>
+책을 구매하여 함께 공부를 진행하고 있다.<br>
 
-1주차: PyCharm, WebStom 설치함으로 실습환경을 준비.
--단축기 사용 숙지
-동아리 OT.
-학습내용 상기.
-스터디 규칙 정하기.
-책 구매.
+**1주차:** 
+- PyCharm, WebStom 설치함으로 실습환경을 준비.<br>
+-단축기 사용 숙지<br>
+- 동아리 OT.<br>
+- 학습내용 상기.<br>
+- 스터디 규칙 정하기.<br>
+- 책 구매.<br>
 
-2주차: 
-강의수강을 시작하였다.
-프로젝트, 기획, 코딩과 html에 대해 알아보았다.
+**2주차:** 
+- 강의수강을 시작하였다.<br>
+- 프로젝트, 기획, 코딩과 html에 대해 알아보았다.<br>
 
-3주차: 
-태그 등과 같은 html 기본문법에 대해 각자 학습을 진행하였다.
-가장 많이 사용되는 태그에 대해 알아보고 실습을 진행하였다.
+**3주차:** 
+- 태그 등과 같은 html 기본문법에 대해 각자 학습을 진행하였다.<br>
+- 가장 많이 사용되는 태그에 대해 알아보고 실습을 진행하였다.<br>
 
-4주차: 
-html 기본문법에 대한 학습을 각자 진행하였다. 
-배운내용을 바탕으로 '흑백요리사' 사이트를 만들어보며 실습을 진행하였다.
+**4주차:**
+- html 기본문법에 대한 학습을 각자 진행하였다.<br>
+- 배운내용을 바탕으로 '흑백요리사' 사이트를 만들어보며 실습을 진행하였다.
        
-5주차:
-HTML의 기초적인 문법에 대한 학습을 완료하였다.
-코드를 작성하며 실습을 진행하였다.
+**5주차:**
+- HTML의 기초적인 문법에 대한 학습을 완료하였다.<br>
+- 코드를 작성하며 실습을 진행하였다.<br><br>
 
 
-- 강의와 책을 통해 html에 대한 학습을 진행하였다.
-- html에 대한 기본 문법에 대해 배웠으며, 실습을 통해 이를 적용해보았다.
-- 평소에는 주에 10강 정도 강의를 수강하고 실습을 병행하며 학습 내용에 대한 이해도를 높였다.
-- 시험기간일때에는 학습량을 낮추어 학습에 대한 부담감을 줄여주었다.
-- 최근 유행하는 프로그램인 '흑백요리사'와 관련된 웹사이트를 만들며 학습에 대한 흥미와 이해도를 높였다.
+>-강의와 책을 통해 html에 대한 학습을 진행하였다.<br>
+-html에 대한 기본 문법에 대해 배웠으며, 실습을 통해 이를 적용해보았다.<br>
+-평소에는 주에 10강 정도 강의를 수강하고 실습을 병행하며 학습 내용에 대한 이해도를 높였다.<br>
+-시험기간일때에는 학습량을 낮추어 학습에 대한 부담감을 줄여주었다.<br>
+-최근 유행하는 프로그램인 '흑백요리사'와 관련된 웹사이트를 만들며 학습에 대한 흥미와 이해도를 높였다.<br>
+<br>
 
 
 
-[데이터 분석팀]
-1주차 :
+##### [데이터 분석팀]
+**1주차 :**
 - Pycharm + anaconda 환경 구축 (로컬)
 - Pycharm 플러그인 및 단축키 학습
 - 동아리 OT
@@ -175,7 +183,7 @@ HTML의 기초적인 문법에 대한 학습을 완료하였다.
 - 책 구매(혼자 공부하는 데이터분석 with python)
 - 책 학습 계획 작성.
 
-2주차 : 
+**2주차 :**
 - 챕터 1-1(데이터 분석이란?)
 데이터 분석과 데이터 과학.
 분석을 위한 도구.
@@ -190,22 +198,23 @@ colab에 data import.
 python환경에서 csv 다루기(Pandas)
 통계 데이터 셋 포럼 정보
 
-3주차 :
+**3주차 :**
 - 챕터 2-1(API 사용하기)
 what is API
 why use JSON for API (HTTP)
 how to use JSON in Python
 
-4주차 :
-통계학습(선형회귀)
+**4주차 :**
+- 통계학습(선형회귀)
 Single Linear Regression
 Multiple Linear Regression을 사용하기 위한 개념적 이해
 
-5주차 :
+**5주차 :**
 - 챕터 2-1(API 사용하기)
 XML in Python
 코랩 상에서 Json과 Xml 다뤄보기 (실습)
-
+<br>
+<br>
 
 #### 2.2. 학습 성찰
 프론트엔드 팀, 데이터 분석팀으로 나누어 학습을 진행하였습니다. 지난 5주는 각자 배우고 싶었던 분야에 대해 공부하며 흥미와 역량을 키울 수 있는 기간이였습니다. 
