--- a/중간보고서.md
+++ b/중간보고서.md
@@ -33,7 +33,7 @@
 <br>
 
 **[프론트엔드 개발팀]**
-<p>- html+css+JavaScript(약 6주) 생활코딩 강의와 책을 이용해 공부.<br>
+- html+css+JavaScript(약 6주) 생활코딩 강의와 책을 이용해 공부.<br>
 일주일 10강 목표, 시험기간에는 유동적으로 조정<br>
 서적: (생활코딩!) HTML+CSS+자바스크립트 : 처음 프로그래밍을 시작하는 입문자의 눈높이에 맞춘<br>
 강의: https://opentutorials.org/course/3084 (약 30강)<br>
@@ -43,7 +43,7 @@
 서적: 생활코딩! React 리액트 프로그래밍 (개정판) 처음 프로그래밍을 시작하는 입문자의 눈높이에 맞춘.<br>
 
 **각자 강의를 듣고, 실습이 필요한 부분은 실습을 진행하며 학습을 진행할 것.<br>
-학습 이후, 데이터 분석팀에서의 output을 ux/ui를 고려해 시각화해 볼 예정.<br></p>
+학습 이후, 데이터 분석팀에서의 output을 ux/ui를 고려해 시각화해 볼 예정.<br>
 <br>
 
 
